src/styles.css
/* styles.css */

@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

:root {
  --main-color: #CD5C08;
  --secondary-color: #FFF5E4;
  --tertiary-color: #333333;
  --shadow: rgba(0, 0, 0, 0.25);
  --mild-shadow: 0 5px 10px var(--shadow);
  --bottom-white-shadow: 0 10px 10px rgba(255, 255, 255, 0.75);
  --strong-shadow: rgba(0, 0, 0, 0.75);
}

body {
    height: 100vh;
    width: auto;
    /* background-color: var(--strong-shadow); */
    /* background-image: linear-gradient(to right, #686868, var(--tertiary-color)); */
    margin: 0 auto;
    font-family: "Raleway", sans-serif; 
    /* color: rgb(207, 207, 207); */
    /* color: black; */
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    /* justify-content: center; */
}

header {
  width: 100%;
  /* padding-left: 15%; */
  background-color: var(--main-color);
  /* box-shadow: var(--mild-shadow); */
}

#hero {
  padding-left: 12.5%;
  color: black
}

nav {
  padding-left: 12.5%;
  text-align:center;
  display:flex;
}

nav button {
  font-size: 15px;
  background-color: grey;
  border-radius: 50px;
  cursor: pointer;
  position: relative; /* Required for the pseudo-element */
}

nav button.triangle-shadow::after {
  content: '';
  position: absolute;
  top: 100%; /* Position the triangle below the button */
  left: 50%;
  transform: translateX(-50%);
  width: 0;
  height: 0;
  border-left: 10px solid transparent; 
  border-right: 10px solid transparent; 
  border-bottom: 15px solid rgba(19, 31, 128, 0.5);
  transition: border-bottom 0.3s ease;  
}

nav button.triangle-shadow:hover::after {
  border-bottom: 25px solid rgba(19, 31, 128, 0.5); 
}


#content {
  margin-top: 24px;
  padding-left: 12.5%;
  padding-right: 12.5%;
  /* display: flex; */
  /* gap: 24px; */
}

#subtitle {
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {font-family: "Cinzel", serif;} 

footer {
  text-align: center;
  padding-top: 12px;
  padding-bottom: 12px;
}

.podcasts-header {
  font-size: 24px;
  margin-bottom: 8px;
}

.podcasts {
  display: grid;
  grid-template-columns: 1fr 1fr; /* Two columns within the projects section */
  grid-auto-rows: minmax(100px, auto); /* Variable number of rows with minimum height of 100px */
  gap: 14px; /* Gap between grid items */
  padding-bottom: 24px;
}

.podcast {
  padding: 12px;
  display: flex;
  flex-direction: column;
  /* background-color: black; */
  /* color: black; */
  border-left: 8px solid var(--main-color);
  border-radius: 8px;
  box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
  transition: .3s;
}

.podcast:hover {
  border-left-width: 10px;
}

.podcast-title {
  font-weight: bold;
  margin-bottom: 8px;
}

.podcast-content {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.podcast-content img {
  height: 100px;
  width: 100px;
  border-radius: 50%;
  /* should probably instead have flex of img and text */
  padding-right: 6px; 
}

.podcast-links {
  display: flex;
  padding-top: 4px;
  margin-top: auto;
  align-content: end;
  justify-content: right;
  gap: 8px;
}
@keyframes App-logo {}

/*   ===== TABLET  media query overrides mobile styles ===== */
@media all and (min-width: 600px) {}

/*   ===== DESKTOP  media query overrides mobile and tablet styles ===== */
@media all and (min-width: 1080px) {}

/*   ===== PRINT  media query overrides previous styles =====  */
@media print {}

